crates/obs-macros/tests/trybuild/fail/L004_measurement_without_metric.stderr
error[E0080]: evaluation panicked: obs L004: field `latency_ms` is MEASUREMENT without a metric kind
              note: MEASUREMENT fields must declare a metric kind (counter / gauge / histogram) so the OTLP metric sink can dispatch correctly.
              help: annotate the proto field with a metric option such as kind=METRIC_KIND_COUNTER and a unit string.
 --> tests/trybuild/fail/L004_measurement_without_metric.rs:5:26
  |
5 | #[derive(Debug, Default, Event)]
  |                          ^^^^^ evaluation of `_` failed here
